


                    JGoodies Looks, Version 1.3.0 preview
                            Release Notes
                        

INTRODUCTION

    This release ...



BUGS FIXED

    o Plastic internal frames use the outdated Java cup icon.   
    

CHANGES THAT AFFECT THE COMPATIBILITY

    o Package names changed from com.jgoodies.plaf to com.jgoodies.looks
    o ExtWindowsLookAndFeel -> WindowsLookAndFeel
    o All ClearLook classes have been removed from the Looks.
      These will show up as a LintLookAndFeel later.


KNOWN ISSUES

    For all issues see http://looks.dev.java.net/servlets/ProjectIssues

    This release still lacks an improved font management
    for the Plastic l&f family on non-Windows platforms.
    For a workaround see issue #10.
      

OTHER CHANGES

    o Docs:      Added and fixed version tags.
    o Demo:      ...
    
    
---------------------------------------------------------------------------

Find below the change history for older releases.



                    JGoodies Looks, Version 1.2.2
                            Release Notes
                        

INTRODUCTION

    This maintenance release fixes a bug and cleans up some code.


DISTRIBUTION CHANGES

    o I have discontinued to ship the plastic-xxx.jar and looks-win-xxx.jar
      that contain only the classes for Plastic and ExtWindows respectively.
      These jars were optional and seemed to confuse several developers;
      I've seen installations where all three jars were in the classpath.
      The ANT build script still generates all three jar files. 
      It's just that since 1.2.2 I ship only the looks-xxx.jar.
      

BUGS FIXED

    o Wide toolbar rollover button margins if no margin has been set.   
    

CHANGES THAT AFFECT THE COMPATIBILITY

    o Renamed LookUtils#isLowRes to #IS_LOW_RESOLUTION.


KNOWN ISSUES

    For all issues see http://looks.dev.java.net/servlets/ProjectIssues

    This release still lacks an improved font management