@@ -11,7 +11,9 @@ Name=JGoodies Looks
 name=looks
 spec.version=1.3
 impl.version=1.3-snapshot
-dist.version=1_3-20040618
+dist.version=1_3-20040826
+spec.vendor=JGoodies Karsten Lentzsch
+impl.vendor=JGoodies Karsten Lentzsch
 copyright.date=2001-2004
 copyright.owner=JGoodies Karsten Lentzsch
 copyright.message=Copyright &#169; ${copyright.date} ${copyright.owner}. All Rights Reserved. 
